# Deepgrep

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  cli.rs  fuzzy.rs  index.rs  main.rs  output.rs  search.rs  watcher.rs
