[package]
name = "deepgrep"
version = "0.1.0"
edition = "2021"
description = "A smarter code search tool with trigram indexing, AST context, and fuzzy matching"
license = "MIT"

[[bin]]
name = "dg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
ignore = "0.4"
rayon = "1"
regex = "1"
colored = "2"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
# Tree-sitter - gerçek AST parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"

# File watcher - otomatik indeks güncelleme
notify = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1